--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>BookMyShow</title>
     <link rel="icon" type="image/x-icon" href="img/fav.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+b
     <!-- CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -126,6 +126,16 @@
                 </div>
             </a>
 
+            <a href="#" id="feedbackBtn">
+                <div class="lefticon">
+                    <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+                </div>
+                <div class="text">Feedback</div>
+                <div class="righticon">
+                    <ion-icon name="chevron-forward-outline"></ion-icon>
+                </div>
+            </a>
+
         </nav>
         <!-- End sidebar -->
 
@@ -193,6 +203,34 @@
 
                     </div>
 
+                    <div id="feedbackModal" class="modal">
+                        <div class="modal-content" style="height:60%;">
+
+                            <div class="getstart">
+                                <h3>Give Feedback</h3>
+                                <span class="close" id="closeFeedback">
+                                    <ion-icon name="close-outline"></ion-icon>
+                                </span>
+                            </div>
+
+                            <div style="padding:20px;">
+                                <input type="text" id="feedbackName" placeholder="Your Name"
+                                    style="width:100%; padding:8px; margin-bottom:15px;">
+
+                                <textarea id="feedbackText" placeholder="Your Feedback"
+                                    style="width:100%; height:100px; padding:8px;"></textarea>
+
+                                <button id="submitFeedback"
+                                    style="margin-top:15px; background:#f84464; color:white; border:none; padding:8px 15px; border-radius:4px;">
+                                    Submit
+                                </button>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <button id="themeToggle">Dark</button>
+
                     <a href="#" class="btn-customized open-menu">
                         <ion-icon name="menu-outline"></ion-icon>
                     </a>
@@ -229,6 +267,7 @@
             <script src="js/app.js"></script>
 
             <h1 class="title">Recommended Movies</h1>
+            <p id="selectedMovie" style="padding-left:147px; font-weight:600; color:#c4242b; margin-top:5px;"></p>
             <div class="movies-list">
                 <div class="card-container">
 
@@ -407,7 +446,8 @@
 
     </div>
     <!-- End wrapper -->
-
+     
+    <script src="script.js"></script>
 </body>
 
 </html>
